# whisperlivekit

./: .dockerignore  .env.example  Dockerfile.app  LICENSE  README.md  docker-compose.yml  pyproject.toml  whisperlive_livekit_fastapi_poc_8be837e1.plan.md
app/: api.py
app/static/: index.html
